--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
